Update daily summary file for 2025-06-26

--- a/daily/2025-06-26.md
+++ b/daily/2025-06-26.md
@@ -7,103 +7,85 @@
 #### **AI内容摘要**
 
 ```
-谷歌发布具身智能机器人模型和智能客服助手。
-讯飞医疗大模型登顶，Rokid眼镜实现量产。
-AI研究突破长文本与多模态，AI版权案有进展。
+AI产品更新频繁，谷歌发布机器人本地AI。科大讯飞医疗大模型达专家级。
+夸克高考志愿服务火爆，正扩充算力。Rokid眼镜量产，斩获大量订单。
+AI研究在多模态、3D重建有突破。周鸿祎谈AI无法替代人类情感创意。
 ```
 
 
 
 #### **AI产品与功能更新**
 
-1.  谷歌**DeepMind**推出了**Gemini Robotics On-Device**模型，它基于**Gemini 2.0 多模态推理能力**，可在设备上**本地运行**🚀，无需网络也能让机器人更好地适应新任务和环境，并支持灵巧操作，未来还将提供**SDK**给开发者。这可是实现真正**具身智能**的里程碑式一步呢！🤖
-    <br/> ![DeepMind机器人模型](https://upload.chinaz.com/2025/0625/6388646720319702162944808.png) <br/>
+1.  Google DeepMind发布了**Gemini Robotics On-Device**，这是一款专为**机器人**设计的**本地运行**AI模型 🤖。它基于**多模态推理**的**Gemini 2.0模型**，能让机器人在没网时也能快速学习新任务、稳定工作，甚至完成折叠衣物等精细操作 ✨。这无疑为**具身智能**的未来发展打下了坚实基础，开启了新篇章！
+    <br/> ![机器人操作演示](https://upload.chinaz.com/2025/0625/6388646720319702162944808.png) <br/>
 
-2.  全国高考志愿填报高峰期，**夸克AI应用**因短时需求暴增，导致生成**志愿报告**出现大量用户**排队**😭。对此，**阿里巴巴集团副总裁吴嘉**紧急回应并已**扩充算力**🔋以缩短等待时间。目前夸克已累计生成超300万份志愿报告，并承诺将以更优质的服务回报用户信任✨。
-    <br/> ![夸克AI志愿报告](https://upload.chinaz.com/2025/0625/6388646574837572213221914.png) <br/>
+2.  高考志愿填报火热，**夸克**的智能志愿报告服务因为太多人使用而出现**排队**现象，累计已生成超300万份报告 📈，这足以看出同学们对它AI能力的信任。面对这份"甜蜜的烦恼”，**阿里巴巴集团副总裁吴嘉**霸气回应，表示团队已紧急**扩充算力**，誓要让每个学子都能顺利拿到这份重要的升学指南！💪
+    <br/> ![夸克志愿报告页面](https://upload.chinaz.com/2025/0625/6388646574837572213221914.png) <br/>
 
-3.  灵伴科技与蓝思科技强强联手打造的**AI+AR眼镜**——**Rokid Glasses**，已在湘潭基地**量产**下线啦！🎉 它还未上市就斩获了25万台全球预售订单，预示着中国AI眼镜终端市场即将迎来商业化爆发的黄金时代！🤩 这款**轻量化**（仅49克）的眼镜深度集成了**通义千问**等**AI大模型**能力，能提供智能提词、实时翻译等超多功能，有望将AI眼镜行业从"技术验证”推向"规模爆发”的新纪元✨。
-    <br/> ![Rokid智能眼镜](https://pic.chinaz.com/picmap/202504031049202004_0.jpg) <br/>
+3.  灵伴科技（Rokid）与蓝思科技共同开发的**消费级AI+AR眼镜Rokid Glasses**，已经正式实现大规模**量产**啦！👓✨ 这款眼镜凭借其**轻量化设计**，并集成了**智能提词、实时翻译、AI识物**等多种**AI大模型能力**，目前已斩获**25万台全球预售订单**！这预示着中国AI眼镜市场即将迎来一次**商业化爆发**，未来可期！🚀
+    <br/> ![Rokid Glasses眼镜](https://pic.chinaz.com/picmap/202504031049202004_0.jpg) <br/>
 
-4.  在Google Cloud Next25大会上，**Google**炫酷地展示了一款基于**Gemini模型**的下一代**客户服务智能助手**客服🤖！它不仅具备强大的**多模态交互**和**自主决策**能力，还能实时洞察用户需求，甚至主动申请折扣优惠呢，简直是太人性化了！🥰 这款创新助手通过与**Salesforce CRM**深度整合，为企业级市场树立了新标杆。
-    <br/> ![Google客户助手](https://upload.chinaz.com/2025/0625/6388644324392135472386056.png) <br/>
-    <video src="https://upload.chinaz.com/video/2025/0625/6388644326716613373000635.mp4" controls="controls" width="100%"></video>
+4.  Google在2025年Cloud Next大会上，展示了基于**Gemini模型**的下一代**客户服务智能助手** 🤖。这个助手可厉害了，不仅能**多模态交互**，还能自己申请**折扣优惠**，并深度整合了Salesforce **CRM系统**！这预示着客户服务即将迎来一场智能化的巨大变革 💥，不过它的准确性和隐私保护方面，我们还得再等等看哦~ 😉
+    <br/> ![Google智能助手](https://upload.chinaz.com/2025/0625/6388644324392135472386056.png) <br/> <video src="https://upload.chinaz.com/video/2025/0625/6388644326716613373000635.mp4" controls="controls" width="100%"></video>
 
-5.  科大讯飞以一鸣惊人之势发布了全球首个完全基于**国产算力**训练的**星火医疗大模型 V2.5国际版**！🌟它不仅在权威评测**MedBench**上斩获榜首，综合诊疗能力更是直逼三甲医院主治医师👨‍⚕️，甚至在实用性上超越了人类医生呢，其**多语言支持**无疑将成为推动全球医疗技术交流的强大引擎⛽️。
-    <br/> ![星火医疗大模型](https://upload.chinaz.com/2025/0625/6388643832338529243919184.png) <br/>
+5.  科大讯飞重磅发布了基于全国产算力训练的**星火医疗大模型V2.5国际版** 🚀！这款模型在权威平台MedBench上以98.4分傲居榜首，其综合诊疗能力已经达到了三甲医院主治医师的水平，在完整性、实用性和可读性上更是超越了人类医生！👨‍⚕️🩺 它还支持多语言，未来有望在全球医疗市场大放异彩，推动国际医疗技术交流与合作呢！🌍✨
+    <br/> ![科大讯飞星火模型](https://upload.chinaz.com/2025/0625/6388643832338529243919184.png) <br/>
 
-6.  **ElevenLabs**又走在前沿了👣，推出了独立的移动应用，让**文本转语音**的魔法✨随时随地都能发生！免费用户就能轻松体验10分钟，而且还能通过精妙的**情感表达控制**让声音更富灵魂呢🗣️，这无疑为**AI语音技术**的大众化普及注入了新的活力🔋。
-    <br/> ![ElevenLabs移动应用](https://upload.chinaz.com/2025/0625/6388643806342729484099864.png) <br/>
+6.  ElevenLabs终于推出了独立的**文本转语音移动应用**啦！📱✨ 无论是iOS还是Android用户，现在都能随时随地生成语音片段了。免费用户也能享受大约10分钟的音频生成时间哦！这款App不仅采用了最新的v3alpha模型，还支持**情感表达控制**，未来还会加入语音转文本和对话式AI工具，真是太方便了！🗣️
+    <br/> ![ElevenLabs手机应用](https://upload.chinaz.com/2025/0625/6388643806342729484099864.png) <br/>
 
 #### **AI前沿研究**
 
-1.  **ETH Zurich**、**斯坦福大学**和**微软**团队联手推出了**SuperDec**新方法，它通过**超四面体原理**🌟，实现了紧凑又富有表现力的**3D 场景表示**，旨在突破**3D 重建**的瓶颈！这技术在**机器人技术**（比如路径规划、物体抓取）和**可控的视觉内容生成**方面都有广泛应用哦。🌐 更多详情请访问：['项目地址'](https://super-dec.github.io/)。
-    <br/> ![SuperDec场景表示](https://upload.chinaz.com/2025/0625/6388646209869575669451398.png) <br/>
+1.  由ETH Zurich、斯坦福大学和微软团队联手推出了**SuperDec**，它正打破传统**3D重建**的局限 🤯！这项技术运用创新的**超四面体**原理，能实现紧凑又生动的**3D场景表示**。不仅能高效处理复杂的**点云**数据，还在**机器人技术**的精准抓取、路径规划，以及**可控视觉内容生成**等方面展现了巨大潜力，为数字世界开辟了新视野！👀 [项目地址](https://super-dec.github.io/)
 
-2.  一款名为**4D-LRM**的**大型时空重建模型**震撼亮相✨，它能基于少量输入，高保真地重建**动态物体**的**完整4D表示**，并且可以从**任意视角**、**任意时刻**一键生成逼真场景呢！😮 这项技术凭借强大的**少样本学习能力**，为**虚拟现实**、**影视制作**和**工业仿真**等领域的**动态场景建模**开辟了无限可能，有望成为连接数字与现实世界的关键桥梁🌉。 ['论文地址'](https://huggingface.co/papers/2506.18890)
-    <br/> ![4D-LRM时空重建](https://upload.chinaz.com/2025/0625/6388644462790679643646927.png) <br/>
+2.  **4D-LRM**是一款超酷的创新型**大型时空重建模型** 🤩。它能仅凭少量视角输入，就完整重建**动态物体**的**4D表示**（三维空间加上时间维度），实现从任意时间、任意视角生成高质量场景！未来，它有望在虚拟现实、影视制作、工业仿真等领域大展拳脚呢！🌟 [论文地址](https://huggingface.co/papers/2506.18890)
 
-3.  **字节跳动**与上海交通大学团队共同推出了**ProtoReasoning框架**，这可是一个旨在通过结构化的**逻辑原型**（比如Prolog和PDDL）显著提升**大语言模型**🤯的**跨领域逻辑推理能力**的利器！这项研究表明抽象推理原型在促进模型知识转移中发挥着重要作用，未来还会深入探讨其理论基础呢🤔。 ['论文地址'](https://arxiv.org/abs/2506.15211)
-    <br/> ![ProtoReasoning框架](https://upload.chinaz.com/2025/0625/6388644284470558872913723.png) <br/>
+3.  字节跳动和上海交通大学联手发布了**ProtoReasoning框架** 👏。它巧妙地利用**Prolog**和**PDDL**等结构化原型表示，显著增强了**大语言模型**的**逻辑推理能力**以及跨领域知识转移的效率 🚀。这项研究为未来**推理原型**的理论探索奠定了坚实基础，真是棒极了！ [论文地址](https://arxiv.org/abs/2506.15211)
 
-4.  研究人员提出一种名为**ParallelComp**的**免训练长文本处理**新方案，通过**并行注意力分块**、**KV缓存智能淘汰**及**注意力偏差校准**等一系列"神操作”✨，有效解决了**大语言模型**处理128K等超长文本时面临的**显存瓶颈**和**注意力下沉**问题。厉害的是，一个仅在8K上下文训练的**8B模型**，在超长文本任务中竟能达到**GPT-4o** 91.17%的性能，甚至在特定任务上超越**GPT-4o**，同时推理速度也大幅提升啦！🚀 ['论文地址'](https://arxiv.org/abs/2502.14317)
-    <br/> ![ParallelComp长文本](https://image.jiqizhixin.com/uploads/editor/547ff2c0-e725-4cea-a961-91e2695c2ce2/640.png) <br/>
-    <br/> ![ParallelComp优化图](https://image.jiqizhixin.com/uploads/editor/6db3e104-f676-4257-8130-17e07becc020/640.png) <br/>
-    <br/> ![ParallelComp模型](https://image.jiqizhixin.com/uploads/editor/487afc86-81d4-4dcc-8af7-2d83c27a7a08/640.png) <br/>
-    <br/> ![ParallelComp性能](https://image.jiqizhixin.com/uploads/editor/d251df08-528a-4acb-ac92-4592-92de0/640.png) <br/>
-    <br/> ![ParallelComp细节](https://image.jiqizhixin.com/uploads/editor/ec9d688e-3935-494b-8097-90e8ea4f8857/640.png) <br/>
-    <br/> ![ParallelComp效果](https://image.jiqizhixin.com/uploads/editor/f70ba37c-4dc7-4693-a92b-26a35ad6fba/640.png) <br/>
-    <br/> ![ParallelComp流程](https://image.jiqizhixin.com/uploads/editor/be9fcb82-e22c-4eed-b1a8-d8b9cd3fa03b/640.png) <br/>
-    <br/> ![ParallelComp结构](https://image.jiqizhixin.com/uploads/editor/4f63e804-05c4-401f-9a76-afe568d0454a/640.png) <br/>
-    <br/> ![ParallelComp图示](https://image.jiqizhixin.com/uploads/editor/a9bac3a5-fd85-494b-81ce-b4b1ecdc632b/640.png) <br/>
-    <br/> ![ParallelComp测试](https://image.jiqizhixin.com/uploads/editor/108ba43a-bdff-4aab-b1ce-b4b1ecdc632b/640.png) <br/>
-    <br/> ![ParallelComp参数](https://image.jiqizhixin.com/uploads/editor/c1aee331-8580-4acb-ac92-4592-92de0/640.png) <br/>
-
-5.  香港大学MMLab、香港中文大学MMLab和商汤科技的研究团队联手推出了**GoT-R1框架**，他们巧妙地引入了**强化学习**🎮，显著增强了**多模态大模型**在**视觉生成**任务中的**语义-空间推理能力**！这个框架及其前身GoT都已全面**开源**，并在T2I-CompBench基准测试上确立了**SOTA**性能，这证明强化学习不仅提升了最终图像质量，更重要的是改进了模型内在的"思考过程”呢💡。 ['论文地址'](https://arxiv.org/pdf/2505.17022) ['项目地址'](https://github.com/gogoduan/GoT-R1)
-    <br/> ![GoT-R1框架](https://image.jiqizhixin.com/uploads/editor/ef5de4fc-68ca-4ebb-8370-bf06d3f6ff3f/640.png) <br/>
+4.  香港大学MMLab、香港中文大学MMLab和商汤科技联手开发了**GoT-R1框架**，这项突破性研究通过引入**强化学习**，大大提升了**多模态大模型**在**视觉生成任务**中的**语义-空间推理能力** 🚀，让模型能自主学习更棒的推理策略！它不仅摆脱了GoT框架对模板的依赖，更在复杂场景生成上达到了**SOTA性能**，太厉害了！✨ [论文地址](https://www.jiqizhixin.com/articles/2025-06-25-9)
 
 #### **AI行业展望与社会影响**
 
-1.  **周鸿祎**最近视频里深入探讨了**AI**与人类的关系，他强调，尽管AI再强大，也无法完全取代人类在**情感理解**、**复杂问题解决**和**创造性思维**这三大领域的独特能力🧠。他甚至引用了瑞典公司AI客服失败后重新招聘人工客服的案例来警示大家：AI应该作为人类的**辅助工具**，而不是完全的替代品，否则在面对复杂情绪时，很容易"跑偏”误解客户意图哦⚠️。
-    <br/> ![周鸿祎谈AI](https://pic.chinaz.com/picmap/202405161743168014_9.jpg) <br/>
+1.  周鸿祎最近在视频里聊到人工智能的未来，他认为AI就算再厉害，也永远无法完全替代人类在**情感理解** 💖、**复杂问题解决** 🧠 和**创造性思维** 🎨 这三大方面的独特能力。他强调，未来的工作将更多地变成**管理与训练**AI，还拿瑞典一家公司AI客服的失败案例来证明，AI在处理复杂客户需求时还是有局限的。🧐
+    <br/> ![周鸿祎演讲](https://pic.chinaz.com/picmap/202405161743168014_9.jpg) <br/>
 
-2.  联邦法官威廉·阿尔苏普首次裁定，**Anthropic**公司使用**版权书籍训练AI模型**属于**合理使用**📚，这为**AI 版权争议**设立了一个重要先例！⚖️ 尽管这个裁决对科技行业有利，但Anthropic仍因从盗版网站获取训练材料而面临**盗版指控**，其获取方式的合法性将另行审理哦👀。
-    <br/> ![AI版权争议](https://pic.chinaz.com/picmap/202305251639384217_24.jpg) <br/>
+2.  联邦法官威廉·阿尔苏普做出了一项开创性的裁定：**Anthropic**公司在未经许可的情况下，使用**版权书籍**训练**AI模型**的行为被认为是**合理使用**！😮 这为AI行业的版权争议树立了一个重要的先例。不过，Anthropic还是因为从盗版网站获取训练材料而面临**盗窃指控**，真是喜忧参半啊~ 🤔
+    <br/> ![法官在法庭上](https://pic.chinaz.com/picmap/202305251639384217_24.jpg) <br/>
 
 #### **开源TOP项目**
 
-1.  想要一次开发，多端运行？拥有28310颗星✨的**Dioxus**项目就是你的答案！这个**全栈应用框架**能让你轻松构建适用于Web、桌面和移动端的应用程序，彻底告别平台壁垒，实现代码复用最大化🚀。 ['项目地址'](https://github.com/DioxusLabs/dioxus)
+1.  **Dioxus**是一个拥有28310颗星的超人气**全栈应用框架** ⭐！它就像一个全能工具箱，旨在为开发者提供统一的解决方案，轻松搞定Web、桌面和移动平台的应用程序开发，大大简化了跨平台开发的复杂性！💻📱 [项目地址](https://github.com/DioxusLabs/dioxus)
 
-2.  **jsoncrack.com**是一个拥有38020星✨的**开源**可视化应用程序，它的超能力就是能把JSON、YAML、XML、CSV等多种数据格式转换为**交互式图表**📈，让数据可视化变得更便捷高效呢！ ['项目地址'](https://github.com/AykutSarac/jsoncrack.com)
+2.  **jsoncrack.com**是一个拥有**38020 Stars**的明星项目 ⭐！它是一款创新的**开源可视化应用程序**，能把**JSON**、**YAML**、**XML**、**CSV**等多种数据格式瞬间变成**交互式图表** 📊，大大提高了数据的可读性和分析效率，简直是数据爱好者的福音！😍 [项目地址](https://github.com/AykutSarac/jsoncrack.com)
 
-3.  **free-for-dev**是一个拥有100044星⭐的**开源项目**，它就像个宝藏清单，为DevOps和基础设施开发人员整理并提供了超多SaaS、PaaS和IaaS的**免费套餐列表**呢！这简直是开发者的福音啊🥳。 ['项目地址'](https://github.com/ripienaar/free-for-dev)
+3.  **free-for-dev**是**DevOps**和**基础设施开发人员**的宝藏项目啊！✨ 它坐拥惊人的**100044 Stars**，是一个超级实用的**开源**项目，专门整理并提供了SaaS、PaaS和IaaS服务的**免费套餐列表**。这简直是为开发者量身定制的省钱、省时神器！💰⏰ [项目地址](https://github.com/ripienaar/free-for-dev)
 
 #### **社媒分享**
 
-1.  杨毅发推对**Gemini CLI**这个**开源AI agent**赞不绝口！👍 他强调它支持MCP和谷歌实时搜索，而且使用上限超高（每分钟60次、每日1000次）！他认为这款工具非常强大，能用来构建MCP并解决现有工具的不足，甚至表示要去囤积谷歌股票呢📈！
-    <video src="https://video.twimg.com/amplify_video/1937860740188459008/vid/avc1/1280x720/y5mSiixk61KY7lSV.mp4?tag=21" controls="controls" width="100%"></video> ['更多详情'](https://x.com/Yangyixxxx/status/1937881859788304743)
+1.  杨毅激动地分享了Google AI开发者推出的**Gemini CLI**，这简直是个"赛博菩萨”啊！🤩 这个**开源AI代理**能把**Gemini 2.5 Pro**直接搬到你的终端，支持**高频率免费使用**，轻松搞定**代码编写、调试和任务自动化**！他觉得这是解决目前工具不足的"很顶”方案，特别在**MCP部署和GitHub搜索**方面，潜力无限！🚀
+    <video src="https://video.twimg.com/amplify_video/1937860740188459008/vid/avc1/1280x720/y5mSiixk61KY7lSV.mp4?tag=21" controls="controls" width="100%"></video> 更多详情：['更多详情'](https://x.com/Yangyixxxx/status/1937881859788304743)
 
-2.  小互分享了一个令人惊艳的**AI设计网站**！🎨 他直呼它能生成精美且可直接使用的界面，而且还大幅简化了**设计提示词**的要求呢！更神奇的是，这个网站还能根据界面上下文逻辑生成剩余的**二级三级页面**，并支持对元素、文字、图像进行**精准编辑**，简直是设计师的福音啊🤩！
-    <video src="https://video.twimg.com/amplify_video/1937845736743546881/vid/avc1/1830x1080/06XtKtTmzRWl15Y-.mp4" controls="controls" width="100%"></video> ['更多详情'](https://x.com/imxiaohu/status/1937847459117687004)
+2.  小互惊呼发现了一个"牛P”的**AI设计网站**！简直是设计师的福音啊！🎨✨ 它能生成精美又直接能用的界面，还大幅**简化了设计提示词要求**。更厉害的是，它不仅能根据简单描述给出详细设计方案，还能基于**上下文逻辑生成多级页面**，甚至支持对元素进行**精准编辑**，大大提升了设计效率和自由度！😍
+    <video src="https://video.twimg.com/amplify_video/1937845736743546881/vid/avc1/1830x1080/06XtKtTmzRWl15Y-.mp4" controls="controls" width="100%"></video> 更多详情：['更多详情'](https://x.com/imxiaohu/status/1937847459117687004)
 
-3.  **AI歌手Yuri**正式出道啦！🎤✨ 更重磅的是，她竟然和**The North Face**达成了首个品牌合作！她所属的平台**Surreal**播放量已突破**700万**次，推文者认为这是首个成功"破圈”的**AI Influencer**，预示着AI歌手的广阔未来呢！🚀 ['更多详情'](https://x.com/Yangyixxxx/status/1937843457630020058)
-    <video src="https://video.twimg.com/amplify_video/1937839647859888128/vid/avc1/1920x1080/ZqWF4mOwaO0pl8KS.mp4?tag=21" controls="controls" width="100%"></video>
+3.  杨毅觉得**AI歌手Yuri**是首个真正"破圈”的**AI Influencer**！🎤🔥 这位来自**Surreal旗下的AI歌手**，不仅成功与The North Face合作，她的作品播放量更是突破了700万！这充分展现了**AI在虚拟偶像领域**日益增长的**影响力与商业潜力**，预示着一个激动人心的新时代已经到来啦！🎉
+    <video src="https://video.twimg.com/amplify_video/1937839647859888128/vid/avc1/1920x1080/ZqWF4mOwaO0pl8KS.mp4?tag=21" controls="controls" width="100%"></video> 更多详情：['更多详情'](https://x.com/Yangyixxxx/status/1937843457630020058)
 
-4.  支付宝近期推出首个"**AI打赏**”服务啦！💰 用户以后可以为自己喜爱的**智能体**打赏了，开发者也能轻松接入这个功能！这真是预示着未来用户与AI互动模式将变得更加多元化呢！🎉 ['更多详情'](https://x.com/imxiaohu/status/1937830267873525781)
+4.  支付宝真是走在前沿！✨ 他们推出了首个**AI打赏**服务，允许开发者在自己的**智能体**里集成这个功能，这样用户就能给喜欢的**智能体**"送花花”啦！💰💖 ['更多详情'](https://x.com/imxiaohu/status/1937830267873525781)
     <video src="https://video.twimg.com/amplify_video/1937829342723350528/vid/avc1/3832x2160/5fgMChOGSHhrZhS4.mp4" controls="controls" width="100%"></video>
 
-5.  **Imagen 4**和**Imagen 4 Ultra**图像模型现在已在**Google AI Studio**开放免费试用啦🆓，同时也在**Gemini API**中提供付费预览服务！✨ 此次更新无疑为开发者提供了更强大的图像生成能力呢！ ['更多详情'](https://x.com/op7418/status/1937708999430033734)
-    <br/> ![Imagen模型界面](https://pbs.twimg.com/media/GuQf71PbMAAn76S?format=jpg&name=orig) <br/>
-    <br/> ![Imagen功能展示](https://pbs.twimg.com/media/GuPPKf6XoAApVmy?format=jpg&name=orig) <br/>
+5.  谷歌放大招啦！🎉 他们在**AI Studio**里免费开放了强大的**Imagen 4**和**Imagen 4 Ultra**图像模型！🤩 现在，用户可以在**Gemini API**和AI Studio免费体验这些超赞的图像生成模型了，快去试试吧！🎨 ['更多详情'](https://x.com/op7418/status/1937708999430033734)
+    <br/> ![Imagen模型界面](https://pbs.twimg.com/media/GuQf71PbMAAn76S?format=jpg) <br/>
+    <br/> ![Imagen模型生成图像](https://pbs.twimg.com/media/GuPPKf6XoAApVmy?format=jpg) <br/>
 
-6.  归藏(guizang.ai)宣布**Claude**的**Artifacts**即将迎来重大更新！🎉 用户不仅能浏览其他人创建的热门网页创意，还能直接在**Artifacts**内部调用**Claude API**，从而构建**AI前端应用**！这标志着**Anthropic**继**Claude Code**后，将进一步发力"**Vibe Coding**”💻✨，超期待的有没有！ ['更多详情'](https://x.com/op7418/status/1937707999902203955)
-    <br/> ![Claude Artifacts](https://pbs.twimg.com/media/GuQeiSZakAAuXQ5?format=jpg&name=orig) <br/>
-    <br/> ![Claude Code](https://pbs.twimg.com/media/GuPL_2RXsAEfufM?format=jpg&name=orig) <br/>
+6.  Anthropic的**Claude Artifacts**要更新啦！🥳 用户以后可以在**Artifacts Gallery**里浏览、分享热门网页创意，还能直接通过**Claude API**创建**AI前端应用**，想想都觉得超酷炫！💻✨ ['更多详情'](https://x.com/op7418/status/1937707999902203955)
+    <br/> ![Claude Artifacts界面](https://pbs.twimg.com/media/GuQeiSZakAAuXQ5?format=jpg) <br/>
+    <br/> ![Claude应用代码](https://pbs.twimg.com/media/GuPL_2RXsAEfufM?format=jpg) <br/>
 
-7.  Zero君聊AI分享说，一段**AI视频**在24小时内竟获得了惊人的**五千万播放量**🤯！这揭示了近期**爆款AI视频**成功的关键在于其"**离谱**”而非接近真实。他指出，许多**爆款AI视频**都集中在**ASMR**、**动物奥运会**、**肥胖奥运会**及**AI自然灾害**等赛道，显示出AI内容创作正朝着新奇且具冲击力的方向发展呢！🎬💥
-    <video src="https://videocdnv2.ruguoapp.com/Fq4tsip9rHZlYtgbAoffH44JmSGg.mp4?sign=8dbd9c0a327973f5d2c9699c8a4de9e6&t=685c15c3" controls="controls" width="100%"></video> ['更多详情'](https://m.okjike.com/originalPosts/685b65582b50c68918a1279b)
+7.  Zero君聊AI分享了一个24小时内播放量突破五千万的**AI视频**，他一针见血地指出，当前**爆款AI视频**的秘诀在于一个字——"**离谱**”！😂 而不是追求**拟人**。常见的爆款主题包括ASMR、动物奥运会和AI自然灾害等。想看更多"离谱”视频？点击 ['此处'](https://m.okjike.com/originalPosts/685b65582b50c68918a1279b) 就能了解更多哦！
+    <br/> <video src="https://videocdnv2.ruguoapp.com/Fq4tsip9rHZlYtgbAoffH44JmSGq.mp4?sign=8dbd9c0a327973f5d2c9699c8a4de9e6&t=685c15c3" controls="controls" width="100%"></video> <br/>
 
-8.  **Tom Huang**分享了20个超实用的**编程Prompt**小技巧💻，他还提到**Warp**近期正积极开发**Coding Agent**！他指出，**Warp**的**Coding Agent**与**Claude Code**的终端Agent功能最为相似，但其按次数收费的模式可能意味着高价值的回报呢💎。 ['更多详情'](https://x.com/tuturetom/status/1937669382752338129)
+8.  Tom Huang分享了20个超实用的**编程Prompt**小技巧 💡，还透露Warp正在大力开发一款类似Claude Code的**终端Agent**。虽然这个Agent是按次收费，但据说只要用一次就能把本钱赚回来！😱 简直是程序员的效率神器啊！🚀 更多详情，快点击 ['此处'](https://x.com/tuturetom/status/1937669382752338129) 围观吧！
     <br/> ![编程Prompt技巧](https://pbs.twimg.com/media/GuP8B1oaoAAdvM0?format=jpg&name=orig) <br/>
 
 ---
