--- a/podcast/2025-06-26.md
+++ b/podcast/2025-06-26.md
@@ -2,46 +2,61 @@
 
 ## Full: Podcast Formatting 
 
-未来的家务活是不是真能交给机器人了？面对人生重要选择，我们能把命运完全交给AI吗？AI真的永远无法理解人类的情感和创意吗？
+AI能成为比人类更可靠的医生吗？
+用版权作品训练AI，是“合理使用”还是变相盗窃？
+当AI越来越聪明，人类还能剩下哪些“专属”能力不被取代？
 
-嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。今天，咱们一起来看看，AI在咱们身边，又悄悄地干了哪些“大事儿”！
+嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。今天咱们聊聊最近AI圈又有哪些“骚操作”，看看它是不是又偷偷地，把咱们的生活给“升级”了。
 
-要说这AI啊，真是越来越“接地气”了。你看，谷歌DeepMind最近就发布了个叫Gemini Robotics On-Device的东西，专门给机器人用的本地AI模型。这意味着啥？以后机器人就算没网，也能自己学新任务，甚至连折叠衣服这种精细活儿都能搞定！嗯，这下好了，咱们上班族回家，可能真能指望机器人把家务活儿都包圆了，想想都觉得，哎，这双手，估计要“解放”了，哈哈哈。
+首先，要说个让人既兴奋又有点“脊背发凉”的消息。谷歌DeepMind发布了个叫Gemini Robotics On-Device的东西，这可是专门为机器人设计的本地AI模型。啥意思呢？就是机器人以后不光能扫地，它甚至能在没网的时候，自己学会折叠衣服！对，你没听错，折！叠！衣！服！这AI啊，都快把我的家务活儿给包圆了，就差给我洗脚了，你说以后家里是不是得专门给机器人腾个“衣帽间”啊？
 
-话说回来，AI现在不光管你下班后的生活，连你家孩子的人生大事儿都开始插手了。高考志愿填报这不刚过去嘛，夸克的智能志愿服务直接“火”到排队，生成了三百多万份报告！这简直是“甜蜜的烦恼”啊，因为太多人涌入，连阿里巴巴集团副总裁都亲自出来喊话了，说要紧急扩充算力，保证每个考生都能用上。你看，当年我们报志愿，那叫一个大海捞针，现在这孩子们，有AI当“参谋”，是不是感觉有点…“凡尔赛”？
+说到AI的火爆，今年高考志愿填报那真是“一号难求”！夸克的智能志愿报告服务，因为太多人抢着用，直接排队排到太平洋去了！听说已经生成了300多万份报告，这哪是AI，这简直是高考生的“救命稻草”啊！阿里巴巴副总裁都亲自出来喊话了，说算力已经紧急扩充了，誓要让每个学子都能顺利拿到这份指南。你看，连AI都得“加班”了，这年头，谁都不容易啊。
 
-当然，AI可不止在手机屏幕里活跃。灵伴科技和蓝思科技联手，把消费级AI+AR眼镜Rokid Glasses给量产了。这眼镜轻巧得很，还能智能提词、实时翻译、AI识物，一下子就斩获了二十五万台预售订单！想想看，以后开会、旅游，戴上这眼镜，是不是瞬间就有了“主角光环”？感觉离科幻电影里的世界又近了一步。
+还有啊，我们之前电影里看的那些AR眼镜，戴上就能看到各种信息，还能识别东西，现在它成真了！Rokid的AI+AR眼镜已经量产了，而且轻得跟没戴一样。它能智能提词、实时翻译、AI识物，全球预售订单都25万台了！以后走在路上，看到什么不认识的，眼镜一扫，“诶，这是你家邻居王阿姨养的柯基，叫旺财，今天没穿衣服。”是不是有点意思？
 
-不过说到AI，大家最关心的还是它到底能干啥，又不能干啥。这不，360的周鸿祎周总最近就说了，AI啊，就算再厉害，也永远取代不了人类的情感理解、复杂问题解决和创造性思维。他拿瑞典一家公司AI客服的失败案例举例，说AI处理不了复杂的人类需求。所以啊，他觉得未来咱们的工作，更多是去管理和训练AI。听他这么一说，嗯，我这颗悬着的心，好像稍微放下了那么一点点，至少情感这块儿，暂时不用担心被AI“卷”掉，对吧？
+当然了，说到AI的“厉害”，科大讯飞的医疗大模型那真是不得了，在权威测试里拿了98.4分，直接超越了三甲医院的主治医师！人家在完整性、实用性和可读性上都比人类医生强。以后看病，是不是直接问AI就行了？医生们会不会变成AI的“导师”，专门教AI怎么更“有人情味儿”地开药方？
 
-当然，AI这个圈子里，也有不少“离谱”的现象。最近有个AI视频在24小时内播放量突破五千万，有人一针见血地指出，现在爆款AI视频的秘诀就一个字——“离谱”！不是去追求什么“拟人”，而是要够“出格”，比如什么动物奥运会啊，AI自然灾害啥的。看来，AI想要“火”，还得先学会“不走寻常路”啊。
+不过，360老周，周鸿祎最近就说了，AI再厉害，也替代不了人类在情感理解、复杂问题解决和创造性思维这三大方面的独特能力。他觉得未来咱们的工作啊，就是去管理和训练AI。他还举了个瑞典AI客服的失败案例，说AI搞不定复杂客户需求。嗯，想想也是，如果AI真能理解我媳妇儿为什么生气，那它才是真大神。
 
-好啦，今天的情报就到这里，注意隐蔽，赶紧撤离！
+更劲爆的消息来了，法官居然裁定Anthropic用版权书籍训练AI模型是“合理使用”！这简直是给AI界打了一针强心剂啊！但你别高兴太早，它还因为从盗版网站获取训练材料被指控盗窃。这事儿就有点意思了，一边说你合理使用，一边又说你偷东西。这年头，AI也得讲“武德”啊。
+
+对了，现在连AI都能当网红了！AI歌手Yuri火得一塌糊涂，播放量几千万，还跟知名品牌合作。支付宝都上线AI打赏功能了，以后给喜欢的智能体“送花花”，嗯，AI都能赚外快了。还有最近爆火的AI视频，大家发现一个规律，就一个字——“离谱”！动物奥运会啊、AI自然灾害啊，越离谱越火。看来，人类的笑点，AI拿捏得死死的。
+
+今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 本期关键词:
-#AI #机器人 #大模型 #高考志愿 #算力 #AR眼镜 #量产 #医疗 #情感 #创意 #版权 #开源 #智能体 #视频 #生成 #未来
+#AI #机器人 #大模型 #医疗 #高考志愿 #AR眼镜 #多模态 #版权 #周鸿祎 #情感 #创造力 #具身智能 #AI歌手 #开源
 
 ## Short: Podcast Formatting 
 
-AI真的不能理解情感和创造力吗？当AI眼镜普及，我们的生活会变成什么样？AI模型训练使用版权内容，这合理吗？
-
+AI机器人真的能在没网的情况下，像人一样学习新任务吗？
+AI在医疗领域超越人类专家，这会如何改变我们看病的方式？
+AI无法替代人类的情感和创意，未来我们的工作会只剩下管理AI吗？
 嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
 
-谷歌DeepMind最近发布了专为机器人设计的本地AI模型，就算没网，它们也能快速学习新任务，甚至帮你折叠衣服。具身智能这回是真要来了！高考志愿填报季，夸克的智能志愿报告服务因为太多人用，都排队了，不过别担心，阿里已经紧急扩充算力，确保每个同学都能顺利拿到报告。消费级AI眼镜也开始大规模量产了，Rokid眼镜凭借轻巧设计和智能提词、实时翻译等AI能力，已经拿到了25万台全球预售订单，AI眼镜的时代真的不远了！
-
-科大讯飞的星火医疗大模型，在权威测试里拿了98.4高分，诊疗能力已经达到三甲医院主治医生水平，有些方面甚至比真人医生还强！这AI医生简直是医学界的“卷王”。
-
-话说回来，AI的边界究竟在哪？奇虎360的周鸿祎说，AI再强，也替代不了人类的情感、解决复杂问题的能力和创造力。未来我们更多的是管理和训练AI。另外，最近还有个有意思的判决：Anthropic公司用版权书籍训练AI模型，法院居然裁定这是“合理使用”！这AI版权这事儿，看来以后还得继续掰扯。
+谷歌DeepMind最近推出了一个给机器人用的本地AI模型，叫Gemini Robotics On-Device。这个模型厉害了，能让机器人在没网时也能快速学习新任务，甚至完成折叠衣物这种精细操作，这为具身智能的未来发展打下了坚实基础。
+说起生活里的AI应用，高考志愿填报这几天火爆得不得了，夸克的智能志愿报告服务，因为太多人使用都出现了排队现象，累计生成了300多万份报告。为此，阿里巴巴集团副总裁吴嘉都表示，团队已紧急扩充算力，确保大家都能拿到这份升学指南。
+消费级AI+AR眼镜市场也有新进展，灵伴科技的Rokid Glasses已经正式实现大规模量产了！这款眼镜凭借轻量化设计，集成了智能提词、实时翻译、AI识物等多种大模型能力，目前已经斩获了25万台全球预售订单，预示着中国AI眼镜市场即将迎来一次商业化爆发。
+在医疗领域，科大讯飞重磅发布了基于全国产算力训练的星火医疗大模型V2.5国际版。这款模型在权威平台MedBench上以98.4分傲居榜首，综合诊疗能力已经达到了三甲医院主治医师的水平，在完整性、实用性和可读性上更是超越了人类医生。它还支持多语言，未来有望在全球医疗市场大放异彩。
+那AI到底能不能替代人类呢？360老总周鸿祎最近就提到，AI就算再厉害，也永远无法完全替代人类在情感理解、复杂问题解决和创造性思维这三大方面的独特能力。他强调，未来的工作将更多地变成管理与训练AI。
+另外一个引起关注的事件是，联邦法官威廉·阿尔苏普做出了一个开创性的裁定：Anthropic公司在未经许可的情况下，使用版权书籍训练AI模型的行为被认为是“合理使用”！这为AI行业的版权争议树立了一个重要的先例。不过，Anthropic还是因为从盗版网站获取训练材料而面临盗窃指控，这事儿还没完呢。
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 本期关键词:
 #AI
 #机器人
-#医疗大模型
+#本地AI
+#具身智能
 #高考志愿
-#AI眼镜
-#多模态
-#3D重建
+#夸克
+#算力
+#AR眼镜
+#量产
+#医疗大模型
+#科大讯飞
+#周鸿祎
 #情感
 #创意
+#版权
+#合理使用
